--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400');
 
 .App {
   width: 100vw;
   height: 100vh;
+  font-weight: 200;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #e5e5e5;
+}
+
+.app-template {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: lightpink;
-  font-family: 'Neucha', cursive;
 }
 
 .heading {
-  font-size: 40px;
-  color: #fff;
+  font-size: 70px;
+  color: lightgray;
   margin: 30px 0;
   z-index: 1;
   text-align: center;
